[metadata]
name = H4dd1xB4dg3r
description =
author = 
licence = MIT
license_file - LILNCENCE
platforms = Kali Linux Rolling
classifiers = 
	Programming Language :: Python 3.9

[options]
packages = 
	H4dd1xB4dg3r
install_requiress =

python_requires = >=3.9
package_dir = 
	=src
zip_safe=
#not sure

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
H4dd1xB4dg3r = # type hinted?

[flake8]
max-line-length = ??
